--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -1,15 +1,15 @@
 {
     "plugins\/ipx800\/desktop\/php\/ipx800_analogique.php": {
         "Général": "Allgemein",
-        "Nom de l'entrée analogique": "Nom de l'entrée analogique",
+        "Nom de l'entrée analogique": "Name des Analogeingangs",
         "Objet parent": "Elternobjekt",
         "Aucun": "Keine",
         "Catégorie": "Kategorie",
         "Activer": "Aktivieren",
         "Visible": "Sichtbar",
-        "Indicateurs": "Indicateurs",
+        "Indicateurs": "Indikatoren",
         "Nom": "Name",
-        "Sous-Type": "Sous-Type",
+        "Sous-Type": "Unter-Typ",
         "Valeur": "Wert",
         "Unité": "Einheit",
         "Paramètres": "Parameter",
@@ -17,15 +17,15 @@
     },
     "plugins\/ipx800\/desktop\/php\/ipx800_bouton.php": {
         "Général": "Allgemein",
-        "Nom de l'entrée numérique": "Nom de l'entrée numérique",
+        "Nom de l'entrée numérique": "Name des Digitaleingangs",
         "Objet parent": "Elternobjekt",
         "Aucun": "Keine",
         "Catégorie": "Kategorie",
         "Activer": "Aktivieren",
         "Visible": "Sichtbar",
-        "Indicateurs": "Indicateurs",
+        "Indicateurs": "Indikatoren",
         "Nom": "Name",
-        "Sous-Type": "Sous-Type",
+        "Sous-Type": "Unter-Typ",
         "Valeur": "Wert",
         "Unité": "Einheit",
         "Paramètres": "Parameter",
@@ -33,15 +33,15 @@
     },
     "plugins\/ipx800\/desktop\/php\/ipx800_relai.php": {
         "Général": "Allgemein",
-        "Nom du relai": "Nom du relai",
+        "Nom du relai": "Relais Name",
         "Objet parent": "Elternobjekt",
         "Aucun": "Keine",
         "Catégorie": "Kategorie",
         "Activer": "Aktivieren",
         "Visible": "Sichtbar",
-        "Indicateurs": "Indicateurs",
+        "Indicateurs": "Indikatoren",
         "Nom": "Name",
-        "Sous-Type": "Sous-Type",
+        "Sous-Type": "Unter-Typ",
         "Valeur": "Wert",
         "Unité": "Einheit",
         "Paramètres": "Parameter",
@@ -49,92 +49,92 @@
     },
     "plugins\/ipx800\/desktop\/php\/ipx800_compteur.php": {
         "Général": "Allgemein",
-        "Nom du compteur": "Nom du compteur",
-        "Nom de l'entrée numérique": "Nom de l'entrée numérique",
+        "Nom du compteur": "Zähler Name",
+        "Nom de l'entrée numérique": "Name des Digitaleingangs",
         "Objet parent": "Elternobjekt",
-        "Aucun": "Aucun",
-        "Catégorie": "Catégorie",
-        "Activer": "Activer",
-        "Visible": "Visible",
-        "Indicateurs": "Indicateurs",
-        "Nom": "Nom",
-        "Sous-Type": "Sous-Type",
-        "Valeur": "Valeur",
-        "Unité": "Unité",
-        "Paramètres": "Paramètres",
-        "Sauvegarder": "Sauvegarder"
+        "Aucun": "Keine",
+        "Catégorie": "Kategorie",
+        "Activer": "Aktivieren",
+        "Visible": "Sichtbar",
+        "Indicateurs": "Indikatoren",
+        "Nom": "Name",
+        "Sous-Type": "Unter-Typ",
+        "Valeur": "Wert",
+        "Unité": "Einheit",
+        "Paramètres": "Parameter",
+        "Sauvegarder": "Speichern"
     },
     "plugins\/ipx800\/desktop\/php\/ipx800.php": {
-        "Ajouter une IPX800": "Ajouter une IPX800",
-        "Entrée analogique": "Entrée analogique",
-        "Relai": "Relai",
-        "Entrée numérique": "Entrée numérique",
-        "Compteur": "Compteur",
-        "Extensions X800": "Extensions X800",
-        "Carte X800 1": "Carte X800 1",
-        "Carte X800 2": "Carte X800 2",
-        "Carte X800 3": "Carte X800 3",
-        "Extensions X440": "Extensions X440",
-        "Carte X440 1": "Carte X440 1",
-        "Carte X440 2": "Carte X440 2",
-        "Carte X440 3": "Carte X440 3",
-        "Mes IPX": "Mes IPX",
-        "Général": "Général",
-        "Nom de l'ipx800": "Nom de l'ipx800",
-        "Objet parent": "Objet parent",
-        "Aucun": "Aucun",
-        "Catégorie": "Catégorie",
-        "Activer": "Activer",
-        "Configurer push": "Configurer push",
-        "Accéder à la carte": "Accéder à la carte",
-        "Visible": "Visible",
-        "IP de l'ipx800": "IP de l'ipx800",
-        "Port de l'ipx800": "Port de l'ipx800",
-        "Compte de l'ipx800": "Compte de l'ipx800",
-        "Password de l'ipx800": "Password de l'ipx800",
-        "Indicateurs": "Indicateurs",
-        "Nom": "Nom",
-        "Sous-Type": "Sous-Type",
-        "Valeur": "Valeur",
-        "Unité": "Unité",
-        "Paramètres": "Paramètres",
-        "Supprimer": "Supprimer",
-        "Sauvegarder": "Sauvegarder",
-        "Sauvegarde effectuée avec succès": "Sauvegarde effectuée avec succès",
-        "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>": "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>"
+        "Ajouter une IPX800": "IPX800 hinzufügen",
+        "Entrée analogique": "Analogeingang",
+        "Relai": "Relais",
+        "Entrée numérique": "Digitaleingang",
+        "Compteur": "Zähler",
+        "Extensions X800": "X800 Erweiterungen",
+        "Carte X800 1": "1 X800 Karte",
+        "Carte X800 2": "2 X800 Karte",
+        "Carte X800 3": "3 X800 Karte",
+        "Extensions X440": "X440 Erweiterungen",
+        "Carte X440 1": "1 X440 Karte",
+        "Carte X440 2": "2 X440 Karte",
+        "Carte X440 3": "3 X440 Karte",
+        "Mes IPX": "Mein IPX",
+        "Général": "Allgemein",
+        "Nom de l'ipx800": "IPX800 Name",
+        "Objet parent": "Elternobjekt",
+        "Aucun": "Keine",
+        "Catégorie": "Kategorie",
+        "Activer": "Aktivieren",
+        "Configurer push": "Push konfigurieren",
+        "Accéder à la carte": "Auf die Karte zugreifen",
+        "Visible": "Sichtbar",
+        "IP de l'ipx800": "IPX800 IP",
+        "Port de l'ipx800": "IPX800 Port",
+        "Compte de l'ipx800": "IPX800 Konto",
+        "Password de l'ipx800": "IPX800 Passwort",
+        "Indicateurs": "Indikatoren",
+        "Nom": "Name",
+        "Sous-Type": "Unter-Typ",
+        "Valeur": "Wert",
+        "Unité": "Einheit",
+        "Paramètres": "Parameter",
+        "Supprimer": "Löschen",
+        "Sauvegarder": "Speichern",
+        "Sauvegarde effectuée avec succès": "Backup wurde erfolgreich abgeschlossen",
+        "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>": "Verwenden Sie das folgende Symbol, um die Details des Elementes zu sehen <i class=\"fa fa-sitemap\"><\\/i>"
     },
     "plugins\/ipx800\/desktop\/modal\/ipx800.configpush.php": {
-        "Information générale": "Information générale",
-        "IP de Jeedom": "IP de Jeedom",
-        "Chemin web": "Chemin web",
-        "Relai": "Relai",
-        "Relai X800 1": "Relai X800 1",
-        "Relai X800 2": "Relai X800 2",
-        "Relai X800 3": "Relai X800 3",
-        "Entrée numérique": "Entrée numérique",
-        "Entrée numérique X800 1": "Entrée numérique X800 1",
-        "Entrée numérique X800 2": "Entrée numérique X800 2",
-        "Entrée numérique X800 3": "Entrée numérique X800 3",
-        "Appliquer": "Appliquer",
-        "Tout décocher": "Tout décocher",
-        "Tout cocher": "Tout cocher"
+        "Information générale": "Allgemeine Informationen",
+        "IP de Jeedom": "Jeedom IP",
+        "Chemin web": "Webpfad",
+        "Relai": "Relais",
+        "Relai X800 1": "1 X800 Relais",
+        "Relai X800 2": "2 X800 Relais",
+        "Relai X800 3": "3 X800 Relais",
+        "Entrée numérique": "Digitaleingang",
+        "Entrée numérique X800 1": "1 X800 Digitaleingang",
+        "Entrée numérique X800 2": "2 X800 Digitaleingang",
+        "Entrée numérique X800 3": "3 X800 Digitaleingang",
+        "Appliquer": "Anwenden",
+        "Tout décocher": "Alle nicht markieren",
+        "Tout cocher": "Alles markieren"
     },
     "plugins\/ipx800\/desktop\/js\/ipx800.js": {
-        "Nom": "Nom",
-        "Calcul": "Calcul",
-        "Rechercher équipement": "Rechercher équipement",
-        "Formule standard": "Formule standard",
-        "Unite": "Unite",
+        "Nom": "Name",
+        "Calcul": "Berechnung",
+        "Rechercher équipement": "Gerät suchen",
+        "Formule standard": "Standardformel",
+        "Unite": "Einheit",
         "Min": "Min",
         "Max": "Max",
-        "Historiser": "Historiser",
-        "Afficher": "Afficher",
-        "Inverser": "Inverser",
-        "Correction Min Auto": "Correction Min Auto",
-        "Correction Max Auto": "Correction Max Auto",
-        "Tester": "Tester",
-        "Configurer l'IPX pour avoir le retour des etats": "Configurer l'IPX pour avoir le retour des etats",
-        "Accèder à l'interface de l'IPX": "Accèder à l'interface de l'IPX",
-        "Application de la configuration Push correcte": "Application de la configuration Push correcte"
+        "Historiser": "Archivieren",
+        "Afficher": "Anzeigen",
+        "Inverser": "Invertieren",
+        "Correction Min Auto": "Min-Autokorrektur",
+        "Correction Max Auto": "Max-Autokorrektur",
+        "Tester": "Testen",
+        "Configurer l'IPX pour avoir le retour des etats": "Konfigurieren Sie die IPX, um die Zustände zurück zu bekommen",
+        "Accèder à l'interface de l'IPX": " Zugriff auf die IPX-Schnittstelle",
+        "Application de la configuration Push correcte": "Anwendung der richtigen Push Konfiguration"
     }
 }
