--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -101,7 +101,13 @@
         "Supprimer": "Löschen",
         "Sauvegarder": "Speichern",
         "Sauvegarde effectuée avec succès": "Backup wurde erfolgreich abgeschlossen",
-        "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>": "Verwenden Sie das folgende Symbol, um die Details des Elementes zu sehen <i class=\"fa fa-sitemap\"><\\/i>"
+        "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>": "Verwenden Sie das folgende Symbol, um die Details des Elementes zu sehen <i class=\"fa fa-sitemap\"><\\/i>",
+        "Extensions X200ph": "Extensions X200ph",
+        "Carte X200ph 1": "Carte X200ph 1",
+        "Carte X200ph 2": "Carte X200ph 2",
+        "Gestion": "Gestion",
+        "Configuration": "Configuration",
+        "Utilisez l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>": "Utilisez l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>"
     },
     "plugins\/ipx800\/desktop\/modal\/ipx800.configpush.php": {
         "Information générale": "Allgemeine Informationen",
@@ -117,7 +123,8 @@
         "Entrée numérique X800 3": "3 X800 Digitaleingang",
         "Appliquer": "Anwenden",
         "Tout décocher": "Alle nicht markieren",
-        "Tout cocher": "Alles markieren"
+        "Tout cocher": "Alles markieren",
+        "Entrée analogique": "Entrée analogique"
     },
     "plugins\/ipx800\/desktop\/js\/ipx800.js": {
         "Nom": "Name",
@@ -136,5 +143,12 @@
         "Configurer l'IPX pour avoir le retour des etats": "Konfigurieren Sie die IPX, um die Zustände zurück zu bekommen",
         "Accèder à l'interface de l'IPX": " Zugriff auf die IPX-Schnittstelle",
         "Application de la configuration Push correcte": "Anwendung der richtigen Push Konfiguration"
+    },
+    "plugins\/ipx800\/plugin_info\/info.json": {
+        "Nécessite firmware 3.05.42 minimum": "Nécessite firmware 3.05.42 minimum"
+    },
+    "plugins\/ipx800\/plugin_info\/configuration.php": {
+        "Faire un don au développeur": "Faire un don au développeur",
+        "Faire un don via Paypal au développeur": "Faire un don via Paypal au développeur"
     }
 }
