--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -101,7 +101,13 @@
         "Supprimer": "Borrar",
         "Sauvegarder": "Salvar",
         "Sauvegarde effectuée avec succès": "Salvado realizado con éxito",
-        "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>": "Utilice el icono siguiente para ver los detalles del dispositivo <i class=\\\"fa fa-sitemap\\\"></i>"
+        "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>": "Utilice el icono siguiente para ver los detalles del dispositivo <i class=\\\"fa fa-sitemap\\\"></i>",
+        "Extensions X200ph": "Extensions X200ph",
+        "Carte X200ph 1": "Carte X200ph 1",
+        "Carte X200ph 2": "Carte X200ph 2",
+        "Gestion": "Gestion",
+        "Configuration": "Configuration",
+        "Utilisez l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>": "Utilisez l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>"
     },
     "plugins\/ipx800\/desktop\/modal\/ipx800.configpush.php": {
         "Information générale": "Información general",
@@ -117,7 +123,8 @@
         "Entrée numérique X800 3": "Entrada digital X800 3",
         "Appliquer": "Aplicar",
         "Tout décocher": "Deseleccionar todas",
-        "Tout cocher": "Seleccionar todas"
+        "Tout cocher": "Seleccionar todas",
+        "Entrée analogique": "Entrée analogique"
     },
     "plugins\/ipx800\/desktop\/js\/ipx800.js": {
         "Nom": "Nombre",
@@ -136,5 +143,12 @@
         "Configurer l'IPX pour avoir le retour des etats": "Configurar el IPX para recibir los retornos de estado",
         "Accèder à l'interface de l'IPX": "Acceder al interfaz del IPX",
         "Application de la configuration Push correcte": "Aplicación de la configuración Push correcta. "
+    },
+    "plugins\/ipx800\/plugin_info\/info.json": {
+        "Nécessite firmware 3.05.42 minimum": "Nécessite firmware 3.05.42 minimum"
+    },
+    "plugins\/ipx800\/plugin_info\/configuration.php": {
+        "Faire un don au développeur": "Faire un don au développeur",
+        "Faire un don via Paypal au développeur": "Faire un don via Paypal au développeur"
     }
 }
