--- a/doc/en_US/changelog.asciidoc
+++ b/doc/en_US/changelog.asciidoc
@@ -2,10 +2,12 @@ WARNING: Detail complet des mises à jour sur https://github.com/guenneguezt/plu
 
 Liste des évolutions majeures de la version courante :
 
-- Modification pour compatibilité Jeedom V3
+- Ajout de configuration push pour entrée analogique
 
 Anciennes évolutions :
 
+- Ajout d'une Clef API specifique au plugin
+- Modification pour compatibilité Jeedom V3
 - Plus de suivi de version
 - Correction du nombre d'entrée pour l'extention X800-2
 - Prise en compte des sondes CT100A et ORP Probe.
